# VisionCraft-Interactive-Image-Processing-App

./: LICENSE  README.md
Qt/: CMakeLists.txt
Qt/include/: mainwindow.h
Qt/src/: main.cpp
pyQt/: readme.txt
pyQt/data/: pyQt - Shortcut.lnk
pyQt/docs/: README.md
pyQt/notebooks/: actve_contour_segmentation.ipynb  circle_hough_transform_test.ipynb  contour.ipynb  experiments.ipynb  feature_detection.ipynb  line_hough_transform_test.ipynb  test_frequency_domain_filters.ipynb  test_tresholding.ipynb
pyQt/resources/: styles.qss
pyQt/src/: app.py  main.py  processor_factory.py  testing_processors.ipynb  utils.py
pyQt/src/classes/: active_contour_processor.py  edge_detector.py  frequency_processor.py  histogram_processor.py  image_processor.py  noise_processor.py  thresholding_processor.py
pyQt/src/functions/: active_contour_functions.py  canny.py  edge_functions.py  frequency_functions.py  histogram_functions.py  hough_transform_functions.py  hybrid_functions.py  noise_functions.py  normalize_and_equalize.py  temp_line_detect.py  thresholding_functions.py
pyQt/test_notebook/: noise_filter_test
pyQt/ui/: FilterTab.py  ImageFrame.py  mainwindow.py  mainwindow.ui
